# GLFW-Snake

./: .gitignore  README.md  build.sh  setup.sh
.github/workflows/: build.yml  cmake-multi-platform.yml
Snake/: CMakeLists.txt  Snake.aps  Snake.sln  Snake.vcxproj  Snake.vcxproj.filters  build_helper.py  file.c  file.h  game.c  game.h  glfw_includes.h  images.c  images.h  input.c  input.h  main.c  point.c  point.h  renderer.c  renderer.h  shaders.c  shaders.h  sprite.c  sprite.h  window.c  window.h
Snake/Builld/Debug/x64/: main.frag  main.vert
Snake/Builld/Release/x64/Shaders/: main.frag
Snake/Shaders/: main.frag  main.vert  rect.vert  square.frag  square.vert  texture.frag  texture.vert
Snake/include/glad/: gl.h
glfw/: glfw3.lib  glfw3dll.exp  glfw3dll.lib
